# calculator

./: CMakeLists.txt  structure.json  test  test.c
src/: compiler.c
